# igris-platform

./: .dockerignore  .gitignore  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
apps/agent/: package.json
apps/agent/src/: index.ts
apps/ai-engine/: main.py  pyproject.toml  requirements.txt
apps/api/: package.json
apps/api/src/: server.ts
apps/api/src/routes/: anomalies.ts  health.ts  logs.ts  server.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AddServerModal.tsx  AnomaliesList.tsx  ServerList.tsx
docs/adr/: 001-monorepo-pnpm.md
infrastructure/docker/agent/: Dockerfile
infrastructure/docker/ai-engine/: Dockerfile
infrastructure/docker/api/: Dockerfile
infrastructure/docker/web/: Dockerfile
